[package]
name = "envmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.4"
bytes = "1.3.0"
futures = "0.3.25"
futures-core = "0.3.25"
http-body-util = "0.1.0-rc.2"
hyper = { version = "0.14.23", features = ["http1", "tcp", "server", "stream"] }
lazy_static = "1.4.0"
prometheus = "0.13.3"
ruuvi-sensor-protocol = "0.6.1"
tokio = { version = "1.24.2", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
